@@ -2,7 +2,6 @@ package software.amazon.polymorph.smithyjava.generator.library;
 
 import com.squareup.javapoet.ClassName;
 import com.squareup.javapoet.CodeBlock;
-import com.squareup.javapoet.MethodSpec;
 
 import java.nio.file.Path;
 import java.util.LinkedHashMap;
@@ -10,6 +9,9 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import software.amazon.polymorph.smithyjava.NamespaceHelper;
 import software.amazon.polymorph.smithyjava.generator.CodegenSubject;
@@ -47,6 +49,8 @@ import software.amazon.smithy.model.traits.TraitDefinition;
 import static software.amazon.polymorph.smithyjava.generator.library.shims.ResourceShim.WRAP_METHOD_NAME;
 
 public class JavaLibrary extends CodegenSubject {
+    @SuppressWarnings("unused")
+    private static final Logger LOGGER = LoggerFactory.getLogger(JavaLibrary.class);
 
     /** Public Java Interfaces will go here. */
     public final String packageName;
@@ -138,7 +142,7 @@ public class JavaLibrary extends CodegenSubject {
         return this.model.getStructureShapes().stream()
                 .filter(shape -> shape.hasTrait(ErrorTrait.class))
                 .filter(shape -> ModelUtils.isInServiceNamespace(shape.getId(), this.serviceShape))
-                .toList();
+                .sorted().toList();
     }
 
     public List<StructureShape> getStructuresInServiceNamespace() {
@@ -158,43 +162,43 @@ public class JavaLibrary extends CodegenSubject {
                     return !targetShape.hasTrait(ReferenceTrait.class);
                 })
                 .filter(shape -> ModelUtils.isInServiceNamespace(shape.getId(), this.serviceShape))
-                .toList();
+                .sorted().toList();
     }
 
     public List<ResourceShape> getResourcesInServiceNamespace() {
         return this.model.getResourceShapes().stream()
                 .filter(shape -> ModelUtils.isInServiceNamespace(shape.getId(), this.serviceShape))
-                .toList();
+                .sorted().toList();
     }
 
     public List<StringShape> getEnumsInServiceNamespace() {
         return this.model.getStringShapesWithTrait(EnumTrait.class).stream()
                 .filter(shape -> ModelUtils.isInServiceNamespace(shape.getId(), this.serviceShape))
-                .toList();
+                .sorted().toList();
     }
 
     public List<UnionShape> getUnionsInServiceNamespace() {
-        return this.model.getUnionShapes().stream().sequential()
+        return this.model.getUnionShapes().stream()
                 .filter(shape -> ModelUtils.isInServiceNamespace(shape.getId(), this.serviceShape))
-                .collect(Collectors.toList());
+                .sorted().toList();
     }
 
     public List<ListShape> getListsInServiceNamespace() {
-        return this.model.getListShapes().stream().sequential()
+        return this.model.getListShapes().stream()
                 .filter(shape -> ModelUtils.isInServiceNamespace(shape.getId(), this.serviceShape))
-                .collect(Collectors.toList());
+                .sorted().toList();
     }
 
     public List<SetShape> getSetsInServiceNamespace() {
-        return this.model.getSetShapes().stream().sequential()
+        return this.model.getSetShapes().stream()
                 .filter(shape -> ModelUtils.isInServiceNamespace(shape.getId(), this.serviceShape))
-                .collect(Collectors.toList());
+                .sorted().toList();
     }
 
     public List<MapShape> getMapsInServiceNamespace() {
-        return this.model.getMapShapes().stream().sequential()
+        return this.model.getMapShapes().stream()
                 .filter(shape -> ModelUtils.isInServiceNamespace(shape.getId(), this.serviceShape))
-                .collect(Collectors.toList());
+                .sorted().toList();
     }
 
     public CodeBlock wrapWithShim(ShapeId referentId, CodeBlock referentVariable) throws ExpectationNotMetException {
